# TitaniumProto

./: .gitignore  Dockerfile  LICENSE  README.md  a.out  pyproject.toml  run.bat  run.sh  setup.py  titanium.proto
.github/workflows/: tests.yaml
cpp_dependencies/: ArduinoJson.h  IProtobuf.h  README.md  SafeConverter.h
example/: Message.cpp  MessageProto.h  main_test.cpp  message.cpp  message.json  test_gen_code.cpp
src/: __init__.py  cli.py  entrypoint.sh  titanium_field.py  titanium_proto.py
src/resources/: protobuf_factory.py  python_factory_rec.txt
tests/: test_python_protobuf.py  test_titanium_proto.py
tests/cpp/: main_test.cpp  test.json  test_gen_code.cpp
tests/python/: _TestProto.py
tests/resources/: test.json  valid_cpp_content.cpp  valid_cpp_content.h
titanium_proto/: titanium_proto.py
titanium_proto/src/: cpp_template.py  python_template.py  titanium_field.py  titanium_file_gen.py
titanium_proto/templates/: protobuf_template.jinja2
